--- a/chrome/BUILD.gn
+++ b/chrome/BUILD.gn
@@ -308,6 +308,7 @@ if (!is_android && !is_mac) {
     if (is_component_build) {
     deps += [
       "//components/startup_metric_utils/browser:lib",
+      "//media/ffmpeg:ffmpeg",
     ]
     }
 
